--- a/snapsapi/templates/admin/users/user/change_list.html
+++ b/snapsapi/templates/admin/users/user/change_list.html
@@ -7,5 +7,10 @@
             {% trans "Reconcile All Posts Count" %}
         </a>
     </li>
+    <li>
+        <a href="{% url 'admin:create_all_default_collections' %}" class="reconcilelink">
+            {% trans "Create Default Collections for All Users" %}
+        </a>
+    </li>
     {{ block.super }}
 {% endblock %}
